[gd_scene load_steps=15 format=3 uid="uid://bt6i2cqpf8bsp"]

[ext_resource type="Material" uid="uid://iogxsc8qjgr4" path="res://gfx/floorr.tres" id="1_ohb3t"]
[ext_resource type="Script" path="res://Scripts/floorFiller.gd" id="2_5aadf"]
[ext_resource type="PackedScene" uid="uid://ugcwu7cdxt6x" path="res://Entities/Environment/Campfire/campfire.tscn" id="3_jqjyb"]
[ext_resource type="Texture2D" uid="uid://bagxmtbh7xyfs" path="res://Entities/Weapons/sword.png" id="4_1d1ha"]
[ext_resource type="Script" path="res://Scenes/Menu.gd" id="5_rt78r"]
[ext_resource type="Theme" uid="uid://ds5iug31kuum6" path="res://gfx/Theme.tres" id="6_5o6hq"]
[ext_resource type="FontFile" uid="uid://gk55fp876bxc" path="res://gfx/DungeonFont.ttf" id="9_ik4oi"]

[sub_resource type="Environment" id="Environment_gsx3s"]
background_mode = 1
background_color = Color(0.152941, 0.152941, 0.266667, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_73g6q"]
shading_mode = 0
albedo_color = Color(0.152941, 0.152941, 0.266667, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_fg21v"]
material = SubResource("StandardMaterial3D_73g6q")
size = Vector2(100, 100)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_tpf4m"]
data = PackedVector3Array(50, 0, 50, -50, 0, 50, 50, 0, -50, -50, 0, 50, -50, 0, -50, 50, 0, -50)

[sub_resource type="LabelSettings" id="LabelSettings_10u15"]
font = ExtResource("9_ik4oi")
font_size = 105
font_color = Color(0.94902, 0.827451, 0.670588, 1)

[sub_resource type="LabelSettings" id="LabelSettings_j1r74"]
font_size = 42
font_color = Color(0.94902, 0.827451, 0.670588, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4kno0"]
font = ExtResource("9_ik4oi")
font_size = 140
font_color = Color(0.94902, 0.827451, 0.670588, 1)

[node name="World" type="Node3D"]

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gsx3s")

[node name="Floor" type="MeshInstance3D" parent="."]
layers = 524289
material_override = ExtResource("1_ohb3t")
mesh = SubResource("PlaneMesh_fg21v")
script = ExtResource("2_5aadf")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor" groups=["navmesh"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_tpf4m")

[node name="Campfire" parent="." instance=ExtResource("3_jqjyb")]
unique_name_in_owner = true
collision_layer = 3
collision_mask = 3
script = null

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(-0.907225, 0.0127002, -0.420455, 0.060736, 0.993025, -0.101056, 0.416239, -0.117218, -0.901668, 0.278, 0.282, -0.904)
top_level = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.81197, 0.49566, -0.308264, 0.538924, -0.839461, 0.0697565, -0.2242, -0.222771, -0.94874, 0.648, 0.14, -0.37)
pixel_size = 0.022
texture_filter = 0
texture = ExtResource("4_1d1ha")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_rt78r")

[node name="MainMenu" type="Control" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_5o6hq")

[node name="Label" type="Label" parent="Control/MainMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -717.0
offset_bottom = 109.0
grow_horizontal = 0
text = "Night by the fire"
label_settings = SubResource("LabelSettings_10u15")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MainMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -245.0
offset_right = 334.0
grow_vertical = 0
theme = ExtResource("6_5o6hq")

[node name="Play" type="Button" parent="Control/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Play"
flat = true
alignment = 0

[node name="Controls" type="Button" parent="Control/MainMenu/VBoxContainer"]
layout_mode = 2
text = "How to play"
flat = true
alignment = 0

[node name="Quit" type="Button" parent="Control/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"
flat = true
alignment = 0

[node name="HowToPlay" type="Control" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_5o6hq")

[node name="Label" type="Label" parent="Control/HowToPlay"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -515.0
offset_bottom = 109.0
grow_horizontal = 0
text = "How To Play"
label_settings = SubResource("LabelSettings_10u15")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HowToPlay"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -79.0
offset_right = 334.0
grow_vertical = 0
theme = ExtResource("6_5o6hq")

[node name="Back" type="Button" parent="Control/HowToPlay/VBoxContainer"]
layout_mode = 2
text = "Back
"
flat = true
alignment = 0

[node name="Label2" type="Label" parent="Control/HowToPlay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 71.0
text = "WASD - move
LMB - stab
RMB - swing

Swing penetrates some enemies and deals
more damage

If health is dropped to zero then you need to
run towards the campfire before it's too late"
label_settings = SubResource("LabelSettings_j1r74")

[node name="Label" type="Label" parent="Control"]
visible = false
layout_mode = 1
offset_right = 717.0
offset_bottom = 109.0
text = "Night
by the fire"
label_settings = SubResource("LabelSettings_4kno0")

[connection signal="pressed" from="Control/MainMenu/VBoxContainer/Play" to="Control" method="_on_play_pressed"]
[connection signal="pressed" from="Control/MainMenu/VBoxContainer/Controls" to="Control" method="_on_controls_pressed"]
[connection signal="pressed" from="Control/MainMenu/VBoxContainer/Quit" to="Control" method="_on_quit_pressed"]
[connection signal="pressed" from="Control/HowToPlay/VBoxContainer/Back" to="Control" method="_on_back_pressed"]

[editable path="Campfire"]
